--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=streaming-service
 
-spring.datasource.url=jdbc:mysql://localhost:3306/streaming_service_db
+spring.datasource.url=jdbc:mysql://localhost:3306/finalproject
 spring.datasource.username=root
+spring.datasource.password=H0ssain146$
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
