--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,9 @@ spring.application.name=streaming-service
 
 spring.datasource.url=jdbc:mysql://localhost:3306/streaming_service_db
 spring.datasource.username=root
+spring.datasource.password=Redskins11!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
